Fixed layout issue with Customer template.

--- a/_spa_css.css
+++ b/_spa_css.css
@@ -1373,7 +1373,7 @@ td.prodSummaryContainer a.productPrintProd{
 /*****COMPANY TEMPLATE****/
 .companyTemplate{
 }
-.companyTemplate div.sideline{
+div.sideline{
 	float: right;
     margin: 0 0 24px;
     width: 160px;
@@ -1384,8 +1384,10 @@ td.prodSummaryContainer a.productPrintProd{
 .companyTemplate div.sideline nav ul li a:hover{
 	color:#FF0000;
 }
-.companyTemplate div.mainColumn{
+div.mainColumn{
 	float: left;
+    margin-left: 5px;
+    margin-right: 10px;
     width: 650px;
 }
 
